--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
                             <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
-                                <p class="foot-email"><a href="#"> sanjay.gupta@globalaxis.in</a></p>
+                                <p class="foot-email"><a href="mailto:sanjay.gupta@globalaxis.in"> sanjay.gupta@globalaxis.in</a></p>
                                 <p>B-XI/8242</p>
                                 <p>Vasant Kunj New Delhi – 110070</p>
                                 <p>INDIA</p>
