--- a/public/case-studies.html
+++ b/public/case-studies.html
@@ -352,11 +352,11 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item text-center">
-                            <h2 class="text-left" style="">CONTACTS</h2>
+                            <h2 class="text-left">CONTACTS</h2>
                             <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
-                                <p class="foot-email"><a href="#"> sanjay.gupta@globalaxis.in</a></p>
+                                <p class="foot-email"><a href="mailto:sanjay.gupta@globalaxis.in"> sanjay.gupta@globalaxis.in</a></p>
                                 <p>B-XI/8242</p>
                                 <p>Vasant Kunj New Delhi – 110070</p>
                                 <p>INDIA</p>
