--- a/public/Post-Entry-Services.html
+++ b/public/Post-Entry-Services.html
@@ -17,7 +17,7 @@
     <title>GA</title>
 
     <!-- favicon img -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/logo.jpg" />
+    <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/logo.jpg" /> -->
 
     <!--font-awesome.min.css-->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
