--- a/public/India-Entry-Strategy.html
+++ b/public/India-Entry-Strategy.html
@@ -220,7 +220,7 @@
                         <div class="single-footer-item">
                             <!-- <h2 style="color:white">OUR PARNTER</h2> -->
                             <a href="index.html">
-                                <img class="img-responsive grow" style="max-width: 85%;" src="assets/images/logo.png" />
+                                <img class="img-responsive grow footer_logo" src="assets/images/logo.png" />
                             </a>
                             <div class="footer-logo">
                                 <a href="https://www.exone.com/" target="_blank">
@@ -292,8 +292,8 @@
                     <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li> -->
                     <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p style="color:white">&copy; 2020 <a style="color:white" href="index.html"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;" class="digitalmagic">360DigitalMagic</a></p>
-
+                <p style="color:black">&copy; 2020 <a style="color:black" href="index.html"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;margin-top: 0px;"
+                        class="digitalmagic">360DigitalMagic</a></p>
             </div>
             <!--/.foot-icons-->
             <div id="scroll-Top">
