--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>GA</title>
 
     <!-- favicon img -->
-    <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/logo.jpg" /> -->
+    <link rel="shortcut icon" type="image/icon" href="../favicon-32x32.png" />
 
     <!--font-awesome.min.css-->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
@@ -84,22 +84,22 @@
                             <div class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
-                                    <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
+                                    <li class="smooth-menu"><a href="about-us.html">ABOUT US</a></li>
 
 
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="SourcingFromIndia.html">Sourcing from India</a></li>
-                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
+                                            <li><a href="india-entry-strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="sourcing-from-india.html">Sourcing from India</a></li>
+                                            <li><a href="post-entry-services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
                                     <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="contact-us.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -153,21 +153,21 @@
                         <div class="panel-heading details">
                             <h4>India entry strategy</h4>
                             <p style=" text-align: justify;"> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white"  href="India-Entry-Strategy.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white"  href="india-entry-strategy.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
                             <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="SourcingFromIndia.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="sourcing-from-india.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Post entry services</h4>
                             <p style=" text-align: justify;"> Now that the clients have entered India, it is paramount for them to be successful. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="Post-Entry-Services.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="post-entry-services.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
@@ -278,11 +278,11 @@
                             <h2>LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
-                                <p><a href="aboutus.html">ABOUT US</a> </p>
+                                <p><a href="about-us.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
                                 <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
-                                <p><a href="contatus.html">CONTACT US</a></p>
+                                <p><a href="contact-us.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
@@ -392,7 +392,10 @@
     <script src="assets/js/datepicker.js"></script>
 
     <!--Custom JS-->
-    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.js">
+    </script>
+
+
 
 </body>
 
