--- a/public/sourcing-from-india.html
+++ b/public/sourcing-from-india.html
@@ -17,7 +17,6 @@
     <title>GA</title>
 
     <!-- favicon img -->
-    <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/logo.jpg" /> -->
 
     <!--font-awesome.min.css-->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
@@ -50,14 +49,14 @@
     <!--responsive.css-->
     <link rel="stylesheet" href="assets/css/responsive.css" />
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
 
 
 </head>
 
 <body>
-
-
-
     <!-- main-menu Start -->
     <header class="top-area">
         <div class="header-area">
@@ -87,22 +86,21 @@
                             <div class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
-                                    <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
+                                    <li class="smooth-menu"><a href="about-us.html">ABOUT US</a></li>
 
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="SourcingFromIndia.html">Sourcing from India</a></li>
-                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
-
+                                            <li><a href="india-entry-strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="sourcing-from-india.html">Sourcing from India</a></li>
+                                            <li><a href="post-entry-services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
                                     <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="contact-us.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -146,19 +144,30 @@
                 <div class="col-md-12">
 
                     <div class="panel panel-default" style="padding: 20px;">
+
                         <div class="panel-heading-Studies">
-                            <h4> Contact Us </h4>
+                            <h3> Services </h3>
                         </div>
-                        <div class="Contact_us">
-                            <p style="font-size: 16px;"><strong>Sanjay K Gupta</strong></p>
-                            <p>Founder & Managing Partner</p>
-                            <p> <strong>Tel.: </strong> 0091-11-46767719, 46076724</p>
-                            <p><strong>Mob.: </strong> 0091-9811141647</p>
-                            <p class="foot-email "><a href="mailto:sanjay.gupta@globalaxis.in"><strong style="color:#666666 !important">Email: </strong> sanjay.gupta@globalaxis.in</a></p>
-                            <p> <strong>Global Axis</strong></p>
-                            <p>B-XI/8242</p>
-                            <p>Vasant Kunj New Delhi – 110070</p>
-                            <p>INDIA</p>
+                        <div class="panel-heading-Studies service2_heading">
+                            <h4> 2. Sourcing from India:
+                            </h4>
+                            <p style=" padding-top: 10px; padding-bottom: 10px;">At Global Axis, we believe in “Be profitable by right sourcing”. We specialize in global sourcing from India to achieve many objectives for our clients that can be strategic, costs, quality, capacity or others.
+                                <p style=" color:black">Our Practices:</p>
+                                <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                    <li>Supplier identification, assessment and development.</li>
+                                    <li>To act as an International purchasing office for our client</li>
+                                    <li>To find a suitable logistics partner and assist in all issues related to packaging and logistics</li>
+                                    <li>To provide complete end to end service related to supplies, schedules, delivery, follow ups, and so on.</li>
+
+                                </ul>
+                                <p style="padding-top: 10px;">Our methodology for supplier –search is illustrated below:</p>
+                                <img src="assets/images/image-1.png">
+                                <p style=" color:black; padding-top: 10px;">Our Strengths:</p>
+                                <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                    <li>Highly focused supplier search due to varied experience about Indian vendor base.</li>
+                                    <li>Clarify any communication and technical gaps that come up from time to time in line with latest developments.</li>
+                                    <li>Reduce risks of failure and gestation time to make global sourcing from low cost countries a reality and not a pipedream.</li>
+                                </ul>
                         </div>
 
                     </div>
@@ -198,11 +207,11 @@
                             <h2>LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
-                                <p><a href="aboutus.html">ABOUT US</a> </p>
+                                <p><a href="about-us.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
                                 <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
-                                <p><a href="contatus.html">CONTACT US</a></p>
+                                <p><a href="contact-us.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
@@ -229,7 +238,7 @@
                             <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
-                                <p class="foot-email"><a href="mailto:sanjay.gupta@globalaxis.in" class="emailmagic"> sanjay.gupta@globalaxis.in</a></p>
+                                <p class="foot-email"><a href="mailto:sanjay.gupta@globalaxis.in"> sanjay.gupta@globalaxis.in</a></p>
                                 <p>B-XI/8242</p>
                                 <p>Vasant Kunj New Delhi – 110070</p>
                                 <p>INDIA</p>
