--- a/public/Post-Entry-Services.html
+++ b/public/Post-Entry-Services.html
@@ -92,21 +92,21 @@
                             <div class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
-                                    <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
+                                    <li class="smooth-menu"><a href="about-us.html">ABOUT US</a></li>
 
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="SourcingFromIndia.html">Sourcing from India</a></li>
-                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
+                                            <li><a href="india-entry-strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="sourcing-from-india.html">Sourcing from India</a></li>
+                                            <li><a href="post-entry-services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
                                     <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="contact-us.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -210,11 +210,11 @@
                             <h2>LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
-                                <p><a href="aboutus.html">ABOUT US</a> </p>
+                                <p><a href="about-us.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
                                 <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
-                                <p><a href="contatus.html">CONTACT US</a></p>
+                                <p><a href="contact-us.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
