--- a/public/about-us.html
+++ b/public/about-us.html
@@ -54,7 +54,6 @@
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
 
-
 </head>
 
 <body>
@@ -90,22 +89,20 @@
                             <div class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
-                                    <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
+                                    <li class="smooth-menu"><a href="about-us.html">ABOUT US</a></li>
 
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="SourcingFromIndia.html">Sourcing from India</a></li>
-                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
-
+                                            <li><a href="india-entry-strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="sourcing-from-india.html">Sourcing from India</a></li>
+                                            <li><a href="post-entry-services.html">Post Entry Services</a> </li>
                                         </ul>
                                     </li>
                                     <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
-
+                                    <li class="smooth-menu"><a href="contact-us.html">CONTACT US</a></li>
                                     <!--/.project-btn-->
                                 </ul>
                             </div>
@@ -145,41 +142,105 @@
     <section class="main-content">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
 
                     <div class="panel panel-default" style="padding: 20px;">
-
                         <div class="panel-heading-Studies">
-                            <h3> Services </h3>
+                            <h4>Global Axis </h4>
                         </div>
-                        <div class="panel-heading-Studies service2_heading">
-                            <h4> 2. Sourcing from India:
-                            </h4>
-                            <p style=" padding-top: 10px; padding-bottom: 10px;">At Global Axis, we believe in “Be profitable by right sourcing”. We specialize in global sourcing from India to achieve many objectives for our clients that can be strategic, costs, quality, capacity or others.
-                                <p style=" color:black">Our Practices:</p>
-                                <ul class="a " style="margin-left: 15px;text-align: justify ">
-                                    <li>Supplier identification, assessment and development.</li>
-                                    <li>To act as an International purchasing office for our client</li>
-                                    <li>To find a suitable logistics partner and assist in all issues related to packaging and logistics</li>
-                                    <li>To provide complete end to end service related to supplies, schedules, delivery, follow ups, and so on.</li>
 
-                                </ul>
-                                <p style="padding-top: 10px;">Our methodology for supplier –search is illustrated below:</p>
-                                <img src="assets/images/image-1.png">
-                                <p style=" color:black; padding-top: 10px;">Our Strengths:</p>
-                                <ul class="a " style="margin-left: 15px;text-align: justify ">
-                                    <li>Highly focused supplier search due to varied experience about Indian vendor base.</li>
-                                    <li>Clarify any communication and technical gaps that come up from time to time in line with latest developments.</li>
-                                    <li>Reduce risks of failure and gestation time to make global sourcing from low cost countries a reality and not a pipedream.</li>
-                                </ul>
+                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
+                            Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India. We have extensive experience in advising companies with
+                            our on-the-ground market studies, highly focused vendor and partner search and post-entry advisory services. We follow a tailored approach to provide solutions to our clients.
+
+                        </p>
+
+                        <p style=" text-align: justify;">
+                            Our broad portfolio of services comprise of :-
+                        </p>
+                        <ul class="a " style="margin-left: 10px;text-align: justify ">
+                            <li><a href="india-entry-strategy.html">India Entry Strategy</a></li>
+                            <li><a href="sourcing-from-india.html">Sourcing from India</a></li>
+                            <li><a href="post-entry-services.html">Post Entry Services</a> </li>
+                        </ul>
+                        <img src="assets/images/image-2.png ">
+                        <p class='text_aboutus' style="text-align: justify;">
+                            Currently we work with the top European companies in their India entry strategies across the three sectors that we are present in: namely a) Automotive b) Industrial c) Health care and personal hygiene
+                        </p>
+
+                        <p class='text_aboutus' style="text-align: justify;">
+                            For those clients with already existing Indian operations, we provide consulting and services so as to increase their profitability and improve performance. We, at Global Axis strive hard to fulfill our commitments to ensure client satisfaction and thus
+                            acknowledged highly for maintaining standards in quality & timely execution of assignments.
+                        </p>
+
+
+                        <div class="panel-heading-Studies " style="margin-bottom: 15px;text-align: justify ">
+                            <h4>Our Team </h2>
                         </div>
+                        <ul class="a " style="margin-left: 10px; text-align: justify">
+                            <li>Global Axis is driven by a group of highly qualified and motivated individuals who have an Indian insight and a deep understanding of the business practices and options in India.</li>
+                            <li>Our associates are from diverse fields like automotive, industrial, dermatology and healthcare, who are well-versed in these sectors.</li>
+                            <li> Team focuses not only on business realization but also on building trust & long-term relationships with the clients. </li>
+                        </ul>
 
                     </div>
                 </div>
 
+                <div class="col-md-6">
 
+                    <div class="panel panel-default about_us" style="padding: 20px;">
+                        <div class="panel-heading-Studies">
+                            <h4>ExOne – Global Axis </h4>
+                        </div>
 
+                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
+                            Global Axis is a business partner of trust for ExOne in India since 2012 and we have been at the forefront of bringing binder jet printing technologies from ExOne.
+                        </p>
 
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Global Axis strongly believes in the 3S of sales, service and spares as we promote ExOne AM technology in the Indian market. We have a ExOne dedicated competent team trained in Germany located in India for sales and service activities.
+
+                        </p>
+                        <p style=" text-align: justify;  margin-bottom: 5px;">
+                            ExOne is a global leader in binder jet 3D printing for the last 20 years. It began as a 3D division of Extrude Hone and today has global operations in US, EU and Asia and has more than 245 patents.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            ExOne has a leadership position in Industrial grade binder jet systems for sand, metal, ceramics and composites.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            ExOne technology has been highly effective in making of sand cores, molds, metal 3D printed parts, ceramic 3D printing and 3D printed tooling solutions.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            The industrial markets for 3D printing are:
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Foundries, Automotive, Aerospace, Pumps, Agricultural, Defense, Medical, Architectural, Energy.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            We are characterized by a 17% YOY growth transitioning from R+D and prototyping to production using the 3Dprinting technology. .
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Sand printing: we make the complex sand cores and molds in matter of days rather than months.
+
+                        </p>
+                        <p>
+                            Metal printing we make custor or mass production of complex single alloy metal parts in hours versus weeks and months.
+                        </p style=" text-align: justify;  margin-bottom: 5px;">
+                        <p>
+                            Ceramic printing, we make complex ceramic parts using silicon carbide.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            We are also in the 3D printed tooling solutions for complex, sacrificial, vacuum and hydro-forming parts.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            For more information, please see our website:
+                            <a href="https://www.exone.com/" target="_blank">www.exone.com</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -211,11 +272,11 @@
                             <h2>LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
-                                <p><a href="aboutus.html">ABOUT US</a> </p>
+                                <p><a href="about-us.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
                                 <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
-                                <p><a href="contatus.html">CONTACT US</a></p>
+                                <p><a href="contact-us.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
