--- a/public/case-studies.html
+++ b/public/case-studies.html
@@ -18,6 +18,7 @@
 
     <!-- favicon img -->
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/logo.jpg" /> -->
+    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico" />
 
     <!--font-awesome.min.css-->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
@@ -103,6 +104,11 @@
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contact-us.html">CONTACT US</a></li>
 
+                                    <li class="smooth-menu" style="padding: 0px;">
+                                        <a href="https://www.exone.com/" target="_blank" style="padding-top: 16px; padding-bottom: 21px;">
+                                            <img class="img-responsive grow" style="max-width: 111px;" src="assets/images/exone-metal-logo.png" />
+                                        </a>
+                                    </li>
                                     <!--/.project-btn-->
                                 </ul>
                             </div>
@@ -300,11 +306,11 @@
                             <a href="index.html">
                                 <img class="img-responsive grow footer_logo" src="assets/images/logo.png" />
                             </a>
-                            <div class="footer-logo">
+                            <!-- <div class="footer-logo">
                                 <a href="https://www.exone.com/" target="_blank">
                                     <img class="img-responsive grow" style="max-width: 65%;" src="assets/images/exone-metal-logo.png" />
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <!--/.single-footer-item-->
                     </div>
@@ -368,7 +374,8 @@
                     <!-- <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li> -->
-                    <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sanjay-k-gupta-2448b913/" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
+
                 </ul>
                 <p style="color:black">&copy; 2020 <a style="color:black" href="index.html"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;margin-top: 0px;"
                         class="digitalmagic">360DigitalMagic</a></p>
