--- a/ImageCal.html
+++ b/ImageCal.html
@@ -59,7 +59,7 @@
 
 
  <div class="footer-submit">
-  <button class="submit-btn" onclick="window.location.href='/'>Back to website</button>
+  <button class="submit-btn" onclick="window.location.href='/'">Back to website</button>
 </div>
   <script>
     function generateInputs() {
